--- a/VerizonFlightBookingApp/src/app/traveler/traveler-landing-page/login/login.component.html
+++ b/VerizonFlightBookingApp/src/app/traveler/traveler-landing-page/login/login.component.html
@@ -1,1 +1,68 @@
-<p>login works!</p>
+<div class="page-top-offset"></div>
+<div class="row">
+    <div class="container-fluid">
+        <div class="col-md-4 offset-md-4">
+            <div class="form-bg-light">
+                <h3 class="title">Traveler Login</h3>
+                <form class="form" [formGroup]="loginForm" (ngSubmit)="login()">
+
+                    <div class="form-group">
+                        <label for="loginId">Username</label>
+                        <input class="form-control" formControlName="loginId" placeholder="Username" id="loginId" />
+                        <div *ngIf="loginForm.controls.loginId.invalid && loginForm.controls.loginId.touched">
+
+                            <div class="text-danger" *ngIf="loginForm.controls.loginId.hasError('required')">
+                                Username is Mandatory
+                            </div>
+                            <div class="field-error-message"
+                                *ngIf="loginForm.controls.loginId.dirty && loginForm.controls.loginId.hasError('loginIdPatternError')">
+                                Username pattern is invalid
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        <label for="password">Password</label>
+                        <input type="password" class="form-control" formControlName="password" placeholder="Password"
+                            id="password" />
+                        <div *ngIf="loginForm.controls.password.invalid
+                                                        && loginForm.controls.password.touched">
+
+                            <div class="text-danger" *ngIf="loginForm.controls.password.hasError('required')">
+                                Password is Mandatory
+                            </div>
+                            <div class="field-error-message"
+                                *ngIf="loginForm.controls.password.dirty && loginForm.controls.password.hasError('passwordPatternError')">
+                                Password pattern is invalid
+                            </div>
+                        </div>
+                    </div>
+
+                    <br>
+                    <br>
+                    <div class="row">
+
+                        <button class="col-md-4 offset-md-1 btn btn-success" [disabled]="!loginForm.valid">
+                            Login
+                        </button>
+
+                        <button class="col-md-4 offset-md-2 btn btn-primary" type="reset" (click)="errorMessage=null"
+                            [disabled]="loginForm.pristine">
+                            Reset
+                        </button>
+
+
+                    </div>
+                </form>
+                <div *ngIf="tryToLogin">
+                    <h3 class="text-center"> Logging...Please Wait!!</h3>
+                </div>
+                <h5 class="error-message text-center">{{errorMessage}}</h5>
+                <!-- <h4 class="success-message">TO REMOVE: {{customer.name}}</h4> -->
+                <br />
+                <div class="text-info">Are you a new traveler? <a routerLink="../register">Sign up</a></div>
+
+            </div>
+        </div>
+    </div>
+</div>
