--- a/VerizonFlightBookingApp/src/app/traveler/traveler-landing-page/registration/registration.component.html
+++ b/VerizonFlightBookingApp/src/app/traveler/traveler-landing-page/registration/registration.component.html
@@ -1,1 +1,93 @@
-<p>registration works!</p>
+<div class="page-top-offset"></div>
+<div class="row">
+    <div class="container-fluid">
+        <div class="col-md-4 offset-md-4">
+            <div class="form-bg-light">
+
+                <h3 class="title">Traveler Registration</h3>
+                <form [formGroup]="registerTravelerForm" (ngSubmit)="registerTraveler()">
+
+
+                    <div class="form-group">
+                        <label class="label-text-black" for="name">Name:</label>
+                        <input class="form-control" formControlName="name" placeholder="Name" id="name" />
+
+                        <div *ngIf="registerTravelerForm.controls.name.invalid
+                                            && registerTravelerForm.controls.name.touched">
+
+                            <div class="text-danger" *ngIf="registerTravelerForm.controls.name.hasError('required')">
+                                Name is Mandatory
+                            </div>
+                            <div class="field-error-message" *ngIf="registerTravelerForm.controls.name.dirty && registerTravelerForm.controls.name.hasError('namePatternError')">
+                                Name pattern is invalid
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        <label class="label-text-black" for="email">Email:</label>
+                        <input class="form-control" formControlName="email" placeholder="Email" id="email" />
+                        <div *ngIf="registerTravelerForm.controls.email.invalid
+                                            && registerTravelerForm.controls.email.touched">
+
+                            <div class="text-danger" *ngIf="registerTravelerForm.controls.email.hasError('required')">
+                                Email is Mandatory
+                            </div>
+                            <div class="field-error-message" *ngIf="registerTravelerForm.controls.email.dirty && registerTravelerForm.controls.email.hasError('emailPatternError')">
+                                Email pattern is invalid
+                            </div>
+                        </div>
+                    </div>
+
+                    
+
+                    <div class="form-group">
+                        <label class="label-text-black" for="password">Password:</label>
+                        <input type="password" class="form-control" formControlName="password" placeholder="Password" id="password" />
+                        <div *ngIf="registerTravelerForm.controls.password.invalid
+                        && registerTravelerForm.controls.password.touched">
+
+                            <div class="text-danger" *ngIf="registerTravelerForm.controls.password.hasError('required')">
+                                Password is Mandatory
+                            </div>
+                            <div class="field-error-message" *ngIf="registerTravelerForm.controls.password.dirty && registerTravelerForm.controls.password.hasError('passwordPatternError')">
+                                Password pattern is invalid
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        <label class="label-text-black" for="loginId">Username:</label>
+                        <input class="form-control" formControlName="loginId" placeholder="Username" id="loginId" />
+
+                        <div *ngIf="registerTravelerForm.controls.loginId.invalid
+                                            && registerTravelerForm.controls.loginId.touched">
+
+                            <div class="text-danger" *ngIf="registerTravelerForm.controls.loginId.hasError('required')">
+                                Username is Mandatory
+                            </div>
+                            <div class="field-error-message" *ngIf="registerTravelerForm.controls.loginId.dirty && registerTravelerForm.controls.loginId.hasError('loginIdPatternError')">
+                                Username pattern is invalid
+                            </div>
+                        </div>
+                    </div>
+
+                    
+                    <div class="row">
+                        <button [disabled]="!registerTravelerForm.valid" class="col-md-4 offset-md-1 btn btn-info">
+                            Register
+                        </button>
+                        <button type="reset" [disabled]="registerTravelerForm.pristine" class="col-md-4 offset-md-2 btn btn-warning">
+                            Reset
+                        </button>
+
+                    </div>
+                </form>
+                <h5 class="error-message">{{errorMessage}}</h5>
+                <h5 class="success-message">{{successMessage}}</h5>
+                <br/>
+                <div class="text-info">Are you a registered traveler? <a routerLink="../login">Sign in</a></div>
+            </div>
+        </div>
+    </div>
+</div>
