--- a/VerizonFlightBookingApp/src/app/traveler/traveler-landing-page/traveler-landing-page.component.html
+++ b/VerizonFlightBookingApp/src/app/traveler/traveler-landing-page/traveler-landing-page.component.html
@@ -1,1 +1,21 @@
-<p>traveler-landing-page works!</p>
+<div class="row">
+    <nav class="navbar navbar-expand-md bg-dark navbar-dark nav-fill w-100">
+        <a class="navbar-brand" href="#"><img src="" class="logo" alt="" srcset="">Verizon Flight</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="collapsibleNavbar">
+            <ul class="navbar-nav ml-auto">
+               <li class="nav-item">
+                    <a routerLink="/admin" routerLinkActive="active" class="nav-link">Admin</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+</div>
+
+
+
+<div>
+    <router-outlet></router-outlet>
+</div>
