Admin's/Traveler's login/register/home pages are completed and Tested.

--- a/VerizonFlightBookingApp/src/app/admin/admin-landing-page/admin-landing-page.component.html
+++ b/VerizonFlightBookingApp/src/app/admin/admin-landing-page/admin-landing-page.component.html
@@ -6,7 +6,7 @@
     <div class="collapse navbar-collapse" id="collapsibleNavbar">
         <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-                <a routerLink="/applicationHome" routerLinkActive="active" class="nav-link">Traveler</a>
+                <a routerLink="/applicationHome" routerLinkActive="active" class="nav-link">Sign in as Traveler</a>
             </li>
         </ul>
     </div>
