--- a/VerizonFlightBookingApp/src/app/traveler/traveler-landing-page/traveler-landing-page.component.html
+++ b/VerizonFlightBookingApp/src/app/traveler/traveler-landing-page/traveler-landing-page.component.html
@@ -7,7 +7,7 @@
         <div class="collapse navbar-collapse" id="collapsibleNavbar">
             <ul class="navbar-nav ml-auto">
                <li class="nav-item">
-                    <a routerLink="/admin" routerLinkActive="active" class="nav-link">Admin</a>
+                    <a routerLink="/admin" routerLinkActive="active" class="nav-link">Sign in as Admin</a>
                 </li>
             </ul>
         </div>
