--- a/VerizonFlightBookingApp/src/app/booking/booking.component.html
+++ b/VerizonFlightBookingApp/src/app/booking/booking.component.html
@@ -1,14 +1,14 @@
 <p>booking works!</p>
-
-<form (ngSubmit)="" [formGroup]="addBookingForm">
+<div>
+<form (ngSubmit)="" [formGroup]="addBookingForm" class="form-control">
     <label for="from">Departing Airport</label>
-    <option id="from" *ngFor="let airport of airportList">
-        <select>{{airport.airportId}}</select>
-    </option>
+    <select id="from" *ngFor="let airport of airportList" (change)="fromSelected($event.target.value)">
+        <option>{{airport.airportId}}</select>
+    </select>
     <label for="to">Arriving Airport</label>
-    <option id="to" *ngFor="let airportTo of airportToList">
-        <select>{{airportTo.airportId}}</select>
-    </option>
+    <select id="to" *ngFor="let airportTo of airportToList">
+        <option>{{airportTo.airportId}}</select>
+    </select>
 
     <label for="date">Date of Travel</label>
     <input id="date" type="datetime" required>
@@ -16,3 +16,4 @@
     <label for="numTravelers">Enter Number of Travelers</label>
     <input id="numTravelers" type="number" required>
 </form>
+</div>
