--- a/VerizonFlightBookingApp/src/app/traveler/booking/booking.component.html
+++ b/VerizonFlightBookingApp/src/app/traveler/booking/booking.component.html
@@ -1,6 +1,6 @@
 <p>booking works!</p>
 <div class="jumbotron">
-    <form (ngSubmit)="" [formGroup]="addBookingForm">
+    <form (ngSubmit)="bookingSubmit()" [formGroup]="addBookingForm">
         <div class="form-group">
             <label for="date">Date of Travel</label>
             <input id="date" type="datetime" required formControlName="dateOfTravel" class="form-control">
@@ -14,8 +14,8 @@
         </div>
         <div class="form-group">
             <label for="to">Arriving Airport</label>
-            <select id="to" *ngFor="let airportTo of airportToList" fromControlName="toAirport" class="form-control">
-                <option>{{airportTo.airportId}}</option>
+            <select id="to" *ngFor="let flight of flightList" fromControlName="toAirport" class="form-control" (change)="selectFlight(flight)">
+                <option>{{flight.toAirport.airportId}}</option>
             </select>
         </div>
 
