--- a/VerizonFlightBookingApp/src/app/traveler/traveler-home/traveler-home.component.html
+++ b/VerizonFlightBookingApp/src/app/traveler/traveler-home/traveler-home.component.html
@@ -1,1 +1,16 @@
+<nav class="navbar navbar-expand-md bg-dark navbar-dark" style="margin-left: -15px;margin-right: -15px;">
+        <a class="navbar-brand" routerLink="/home">Home</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+    
+        <div class="collapse navbar-collapse" id="collapsibleNavbar">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a routerLink="booking" routerLinkActive="active" class="nav-link">Book a Flight</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
 <p>traveler-home works!</p>
+<router-outlet></router-outlet>
