--- a/VerizonFlightBookingApp/src/app/traveler/traveler-landing-page/registration/registration.component.html
+++ b/VerizonFlightBookingApp/src/app/traveler/traveler-landing-page/registration/registration.component.html
@@ -3,7 +3,7 @@
     <div class="container-fluid">
         <div class="col-md-4 offset-md-4">
             <div class="form-bg-light">
-
+                <br/>
                 <h3 class="title">Traveler Registration</h3>
                 <form [formGroup]="registerTravelerForm" (ngSubmit)="registerTraveler()">
 
@@ -83,8 +83,14 @@
 
                     </div>
                 </form>
-                <h5 class="text-danger">{{errorMessage}}</h5>
-                <h5 class="text-success">{{successMessage}}</h5>
+                <div *ngIf="errorMessage!=null">
+                    <h6 class="text-danger">{{errorMessage}}</h6>
+                </div> 
+                <div *ngIf="successMessage!=null">
+                    <h6 class="text-success">{{successMessage}}</h6>
+                    <h6 class="text-success">Confirmation is sent to {{traveler.email}}</h6>
+                </div>
+                
                 <br/>
                 <div class="text-info">Are you a registered traveler? <a routerLink="../login">Sign in</a></div>
             </div>
