--- a/VerizonFlightBookingApp/src/app/traveler/traveler-home/traveler-home.component.html
+++ b/VerizonFlightBookingApp/src/app/traveler/traveler-home/traveler-home.component.html
@@ -6,6 +6,11 @@
     
         <div class="collapse navbar-collapse" id="collapsibleNavbar">
             <ul class="navbar-nav">
+                <!-- <li class="nav-item">
+                    <a routerLink="viewFlights" routerLinkActive="active" class="nav-link">
+                        View Flights
+                    </a>
+                </li> -->
                 <li class="nav-item">
                     <a routerLink="booking" routerLinkActive="active" class="nav-link">Book a Flight</a>
                 </li>
