updated front end

--- a/VerizonFlightBookingApp/src/app/admin/admin-home/add-flight/add-flight.component.html
+++ b/VerizonFlightBookingApp/src/app/admin/admin-home/add-flight/add-flight.component.html
@@ -68,7 +68,7 @@
           </div></div> 
       </form>
       <div *ngIf="successMessage!=null || errorMessage!=null">
-        <div class="success-message text-center">
+        <div class="success-message text-center text-success">
             {{successMessage}}
         </div>
         <div class="error-message text-center">
