--- a/VerizonFlightBookingApp/src/app/admin/admin-home/admin-home.component.html
+++ b/VerizonFlightBookingApp/src/app/admin/admin-home/admin-home.component.html
@@ -15,6 +15,16 @@
                     Add Flight
                 </a>
             </li>
+            <li class="nav-item">
+                <a routerLink="viewAirports" routerLinkActive="active" class="nav-link">
+                    View Airports
+                </a>
+            </li>
+            <li class="nav-item">
+                <a routerLink="addAirport" routerLinkActive="active" class="nav-link">
+                    Add Airport
+                </a>
+            </li>
         </ul>
         <ul class="navbar-nav navbar-right ml-auto">
             <li class="nav-item">
