--- a/VerizonFlightBookingApp/src/app/traveler/traveler-home/traveler-home.component.html
+++ b/VerizonFlightBookingApp/src/app/traveler/traveler-home/traveler-home.component.html
@@ -6,13 +6,25 @@
     
         <div class="collapse navbar-collapse" id="collapsibleNavbar">
             <ul class="navbar-nav">
-                <!-- <li class="nav-item">
+                <li class="nav-item">
                     <a routerLink="viewFlights" routerLinkActive="active" class="nav-link">
                         View Flights
                     </a>
-                </li> -->
+                </li>
+                <li class="nav-item">
+                    <a routerLink="viewAirports" routerLinkActive="active" class="nav-link">
+                        View Airports
+                    </a>
+                </li>
                 <li class="nav-item">
                     <a routerLink="booking" routerLinkActive="active" class="nav-link">Book a Flight</a>
+                </li>
+            </ul>
+            <ul class="navbar-nav navbar-right ml-auto">
+                <li class="nav-item">
+                    <a routerLink="/applicationHome" routerLinkActive="active" class="nav-link">
+                        Log out
+                    </a>
                 </li>
             </ul>
         </div>
