Added first booking api unit test

--- a/VerizonFlightBookingApp/src/app/traveler/booking/booking.component.html
+++ b/VerizonFlightBookingApp/src/app/traveler/booking/booking.component.html
@@ -44,5 +44,6 @@
         </div>
         <button type="submit" class="btn btn-primary" [disabled]="addBookingForm.pristine" *ngIf="successMessage == null">Submit</button>
         <div class="text-success" *ngIf="successMessage != null">{{successMessage}}</div>
+        <div class="text-danger" *ngIf="errorMessage != null">{{errorMessage}}</div>
     </form>
 </div>
