--- a/VerizonFlightBookingApp/src/app/admin/admin-home/admin-home.component.html
+++ b/VerizonFlightBookingApp/src/app/admin/admin-home/admin-home.component.html
@@ -18,7 +18,7 @@
         </ul>
         <ul class="navbar-nav navbar-right ml-auto">
             <li class="nav-item">
-                <a routerLink="/applicationHome" routerLinkActive="active" class="nav-link">
+                <a href= "logout" routerLink="/applicationHome" routerLinkActive="active" class="nav-link">
                     Log out
                 </a>
             </li>
